--- a/Application/EpicSolutions/EpicSolutions.Web/Views/Shared/_Layout.cshtml
+++ b/Application/EpicSolutions/EpicSolutions.Web/Views/Shared/_Layout.cshtml
@@ -50,8 +50,7 @@
                                 <a class="nav-link dropdown-toggle text-white fs-5" href="#" id="hrBlockDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                                     HR Block
                                 </a>
-                                <ul class="dropdown-menu bg-light bg-opacity-75" aria-labelledby="hrBlockDropdown">
-                                   @*  <li><a class="dropdown-item" href="#" style="color: #4429C6;"><i class="fa-solid fa-plus icon-spacing"></i>HR Services</a></li> *@
+                                <ul class="dropdown-menu bg-light bg-opacity-75" aria-labelledby="hrBlockDropdown">                                 
 
                                     @if (!string.IsNullOrEmpty(userRole) && userRole == "HR Employee")
                                     {
@@ -68,7 +67,7 @@
                                 </ul>
                             </li>
 
-                            <li class="nav-item dropdown me-3">
+                          @*   <li class="nav-item dropdown me-3">
                                 <a class="nav-link dropdown-toggle text-white fs-5" href="#" id="orderBlockDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                                     Order Block
                                 </a>
@@ -77,11 +76,10 @@
                                     <li><a class="dropdown-item" asp-controller="Order" asp-action="Index" style="color: #4429C6;"><i class="fa-solid fa-list icon-spacing"></i>Search Order</a></li>
                                     @if(isSupervisor){
                                         <li><a class="dropdown-item" asp-controller="Order" asp-action="Search" style="color: #4429C6;"><i class="fa-solid fa-list icon-spacing"></i>Processing</a></li>
-                                    }
-                                   
+                                    }                                  
                                 
                                 </ul>
-                            </li>
+                            </li> *@
 
 
                             <li class="nav-item">
