--- a/Application/EpicSolutions/EpicSolutions.Web/Views/Shared/_Layout.cshtml
+++ b/Application/EpicSolutions/EpicSolutions.Web/Views/Shared/_Layout.cshtml
@@ -107,24 +107,24 @@
         </main>
     </div>
 
-    <footer class="border-top text-muted bg-black ">
+    <footer class="border-top text-muted bg-black">
         <div class="container">
             <div class="row">
                 <div class="col-12">
-                    <div class="row mt-3">
+                    <div class="row mt-2">
                         <h3 class="text-white">Let's connect</h3>
                         <div class="col-md-4 col-sm-12">
                             <ul class="list-unstyled">
                                 <li class=""><a href="" class="nav-link fs-6 text-white">Get in touch</a></li>
                                 <li class=""><a href="#" class="nav-link fs-6 text-white">Explore careers</a></li>
-                                <li class=""><a href="#" class="nav-link fs-6 text-white">View locations</a></li>
+                                @* <li class=""><a href="#" class="nav-link fs-6 text-white">View locations</a></li> *@
                             </ul>
                         </div>
                         <div class="col-md-4 col-sm-12">
                             <ul class="list-unstyled">
                                 <li class=""><a href="#" class="nav-link fs-6 text-white">Who we are</a></li>
                                 <li class=""><a href="#" class="nav-link fs-6 text-white">What we do</a></li>
-                                <li class=""><a href="#" class="nav-link fs-6 text-white">Out thinking</a></li>
+                               @*  <li class=""><a href="#" class="nav-link fs-6 text-white">Out thinking</a></li> *@
                             </ul>
                         </div>
                         <div class="col-md-4 col-sm-12">
