--- a/Application/EpicSolutions/EpicSolutions.Web/Views/Login/Login.cshtml
+++ b/Application/EpicSolutions/EpicSolutions.Web/Views/Login/Login.cshtml
@@ -33,7 +33,7 @@
                         <span class="input-group-text">
                             <i class="fa-solid fa-user"></i>
                         </span>
-                        <input asp-for="EmployeeNumber" class="form-control" id="employeeNumberInput" placeholder="Employee Number is 00000011" />
+                        <input asp-for="EmployeeNumber" class="form-control" id="employeeNumberInput" placeholder="HR Employee 00000009, Employee 00000017" />
                     </div>
                     <span asp-validation-for="EmployeeNumber" class="text-danger"></span>
                 </div>          
