--- a/Application/EpicSolutions/EpicSolutions.Web/Views/Shared/_Layout.cshtml
+++ b/Application/EpicSolutions/EpicSolutions.Web/Views/Shared/_Layout.cshtml
@@ -42,9 +42,9 @@
                             <li class="nav-item">
                                 <a class="nav-link text-white fs-5" asp-area="" asp-controller="Employee" asp-action="Dashboard">Dashboard</a>
                             </li> 
-                            <li class="nav-item">
+                           @*  <li class="nav-item">
                                 <a class="nav-link text-white fs-5" asp-area="" asp-controller="Dashboard" asp-action="Chart">Chart</a>
-                            </li>
+                            </li> *@
 
                             <li class="nav-item dropdown me-3">
                                 <a class="nav-link dropdown-toggle text-white fs-5" href="#" id="hrBlockDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
